--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36,6 +36,10 @@ a {
     text-decoration: none;
 }
 
+.hidden {
+    display: none;
+}
+
 a:hover { text-decoration: underline; }
 
 /* "Jump to Table of Contents" link is shown to assistive tools, but hidden from
@@ -204,8 +208,8 @@ th {
 .toc li li { font-weight: normal; }
 
 /* -- Intro and Example Boxes ----------------------------------------------- */
+/*
 .intro, .example { margin-bottom: 2em; }
-
 .example {
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
@@ -215,10 +219,10 @@ th {
     box-shadow: 0 0 5px #bfbfbf;
     padding: 1em;
 }
-
 .intro {
     background: none repeat scroll 0 0 #F0F1F8; border: 1px solid #D4D8EB; padding: 0 1em;
 }
+*/
 
 /* -- Other Styles ---------------------------------------------------------- */
 
@@ -268,13 +272,6 @@ th {
     text-align: right;
 }
 
-
-a.external {
-    background-image: url(external-small.png);
-    background-repeat: no-repeat;
-    background-position: 0 0;
-    padding-left: 16px;
-}
 
 #classdocs .item {
     border-bottom: 1px solid #466899;
